testsuite/tests/polykinds/T15795a.stderr

T15795a.hs:9:3: error:
    • Cannot generalise type because a skolem would escape.
      When generalising this type:
        forall u (a :: u). F @u @cat10 a
      these skolems would escape:
        u
      if we quantified this variable:
        (cat10 :: u)
      (Indeed, I sometimes struggle even printing this correctly,
       due to its ill-scoped nature.)
    • In the definition of data constructor ‘Prod’
      In the data declaration for ‘F’
